--- a/pycam/Gui/gtk-interface/pycam-project.ui
+++ b/pycam/Gui/gtk-interface/pycam-project.ui
@@ -2032,7 +2032,7 @@ It will spare some material close to the model (depending on the "step down" val
                                             <child>
                                               <object class="GtkTable" id="table7">
                                                 <property name="visible">True</property>
-                                                <property name="n_rows">4</property>
+                                                <property name="n_rows">5</property>
                                                 <property name="n_columns">2</property>
                                                 <property name="column_spacing">2</property>
                                                 <property name="row_spacing">2</property>
@@ -2160,6 +2160,37 @@ This operation is not available for engraving.</property>
                                                   <packing>
                                                     <property name="left_attach">1</property>
                                                     <property name="right_attach">2</property>
+                                                    <property name="x_options">GTK_FILL</property>
+                                                    <property name="y_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkLabel" id="EngraveOffsetLabel">
+                                                    <property name="visible">True</property>
+                                                    <property name="xalign">0</property>
+                                                    <property name="label" translatable="yes">Engrave Offset:</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="top_attach">4</property>
+                                                    <property name="bottom_attach">5</property>
+                                                    <property name="x_options">GTK_FILL</property>
+                                                    <property name="y_options">GTK_FILL</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <object class="GtkSpinButton" id="EngraveOffsetControl">
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="invisible_char">&#x25CF;</property>
+                                                    <property name="adjustment">EngraveOffsetValue</property>
+                                                    <property name="digits">2</property>
+                                                    <property name="numeric">True</property>
+                                                  </object>
+                                                  <packing>
+                                                    <property name="left_attach">1</property>
+                                                    <property name="right_attach">2</property>
+                                                    <property name="top_attach">4</property>
+                                                    <property name="bottom_attach">5</property>
                                                     <property name="x_options">GTK_FILL</property>
                                                     <property name="y_options">GTK_FILL</property>
                                                   </packing>
@@ -5181,5 +5212,8 @@ Any selected group of dimensions will be scaled accordingly.</property>
     <property name="lower">0.01</property>
     <property name="upper">100</property>
     <property name="step_increment">0.10000000000000001</property>
+  </object>
+  <object class="GtkAdjustment" id="EngraveOffsetValue">
+    <property name="upper">1000</property>
   </object>
 </interface>
