--- a/share/ui/pycam-project.ui
+++ b/share/ui/pycam-project.ui
@@ -5114,9 +5114,62 @@ ODE can't be used in combination with parallel processing or server mode.</prope
                         <property name="orientation">vertical</property>
                         <property name="spacing">2</property>
                         <child>
-                          <object class="GtkHBox" id="hbox28">
+                          <object class="GtkTable" id="table14">
                             <property name="visible">True</property>
-                            <property name="spacing">50</property>
+                            <property name="n_rows">3</property>
+                            <property name="n_columns">2</property>
+                            <property name="column_spacing">6</property>
+                            <property name="row_spacing">2</property>
+                            <child>
+                              <object class="GtkLabel" id="GCodeFilenameExtensionLabel">
+                                <property name="visible">True</property>
+                                <property name="xalign">0</property>
+                                <property name="label" translatable="yes">Custom GCode filename extension:</property>
+                              </object>
+                              <packing>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                                <property name="y_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkEntry" id="GCodeFilenameExtension">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="tooltip_text" translatable="yes">Select a file extension to be used when storing GCode files.
+Leave this field empty if you are satisfied with the default: "ngc".
+This is just a convenience setting. The "Export Toolpath" dialog
+still allows you to choose the file extension freely.</property>
+                                <property name="invisible_char">&#x25CF;</property>
+                                <property name="width_chars">6</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                                <property name="top_attach">1</property>
+                                <property name="bottom_attach">2</property>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options"></property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkSpinButton" id="SafetyHeightControl">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="tooltip_text" translatable="yes">Rapid moves are allowed at this z-level.
+This should be clearly above the stock material.
+Choose a small value to minimize rapid moves up and down.</property>
+                                <property name="invisible_char">&#x25CF;</property>
+                                <property name="adjustment">SafetyHeightValue</property>
+                                <property name="digits">1</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options">GTK_EXPAND</property>
+                              </packing>
+                            </child>
                             <child>
                               <object class="GtkLabel" id="SafetyHeightLabel">
                                 <property name="visible">True</property>
@@ -5124,22 +5177,44 @@ ODE can't be used in combination with parallel processing or server mode.</prope
                                 <property name="label" translatable="yes">Safety Height:</property>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="position">0</property>
+                                <property name="y_options">GTK_FILL</property>
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkSpinButton" id="SafetyHeightControl">
+                              <object class="GtkLabel" id="GCodeMinimumStepLabel">
                                 <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="invisible_char">&#x25CF;</property>
-                                <property name="adjustment">SafetyHeightValue</property>
-                                <property name="digits">1</property>
+                                <property name="xalign">0</property>
+                                <property name="label" translatable="yes">Minimum step size:</property>
                               </object>
                               <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">False</property>
-                                <property name="position">1</property>
+                                <property name="top_attach">2</property>
+                                <property name="bottom_attach">3</property>
+                                <property name="y_options">GTK_FILL</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkSpinButton" id="GCodeMinimumStep">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="tooltip_text" translatable="yes">Specify the minimum step width of your machine.
+PyCAM will not write GCode for moves that are smaller
+(in all directions) than this step width. This can reduce
+machine time slightly since no-move commands do not
+need to be processed at all.
+Use the default (0.0) if you want to export all GCode
+moves regardless of their length.</property>
+                                <property name="invisible_char">&#x25CF;</property>
+                                <property name="width_chars">7</property>
+                                <property name="adjustment">GCodeMinimumStepValue</property>
+                                <property name="digits">5</property>
+                              </object>
+                              <packing>
+                                <property name="left_attach">1</property>
+                                <property name="right_attach">2</property>
+                                <property name="top_attach">2</property>
+                                <property name="bottom_attach">3</property>
+                                <property name="x_options">GTK_FILL</property>
+                                <property name="y_options">GTK_EXPAND</property>
                               </packing>
                             </child>
                           </object>
@@ -5181,7 +5256,7 @@ ODE can't be used in combination with parallel processing or server mode.</prope
                                         <property name="visible">True</property>
                                         <property name="spacing">4</property>
                                         <child>
-                                          <object class="GtkLabel" id="dsfdc">
+                                          <object class="GtkLabel" id="GCodePathModeLabel">
                                             <property name="visible">True</property>
                                             <property name="xalign">0</property>
                                             <property name="label" translatable="yes">Path mode:</property>
@@ -5311,40 +5386,6 @@ ODE can't be used in combination with parallel processing or server mode.</prope
                             <property name="expand">False</property>
                             <property name="fill">False</property>
                             <property name="position">2</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkHBox" id="hbox37">
-                            <property name="visible">True</property>
-                            <property name="spacing">3</property>
-                            <child>
-                              <object class="GtkLabel" id="GCodeFilenameExtensionLabel">
-                                <property name="visible">True</property>
-                                <property name="label" translatable="yes">Custom GCode filename extension:</property>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="position">0</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <object class="GtkEntry" id="GCodeFilenameExtension">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="tooltip_text" translatable="yes">The file extension to be used when storing a GCode file.
-Leave this field empty to use the default ("ngc").</property>
-                                <property name="invisible_char">&#x25CF;</property>
-                                <property name="width_chars">6</property>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="position">1</property>
-                              </packing>
-                            </child>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="position">3</property>
                           </packing>
                         </child>
                       </object>
@@ -8037,5 +8078,9 @@ upon interesting bugs and weird results.</property>
   <object class="GtkImage" id="CropToolpath">
     <property name="visible">True</property>
     <property name="stock">gtk-zoom-fit</property>
+  </object>
+  <object class="GtkAdjustment" id="GCodeMinimumStepValue">
+    <property name="upper">100</property>
+    <property name="step_increment">5.0000000000000004e-05</property>
   </object>
 </interface>
